[package]
name = "rtti"
version = "0.3.2"
authors = ["Dennis Möhlmann <dmo479@gmail.com>"]
description = "[very early WIP] Run-time type information trait. Use crate rtti-derive to implement."
documentation = "https://docs.rs/rtti/"
readme = "README.md"
repository = "https://github.com/sinesc/rtti.git"
license = "MIT"
categories = [ "data-structures" ]

[dependencies]
